# ripgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  osxcross_setup.sh
src/: main.rs  test.txt  utils.rs
