[package]
name = "regexgrep"
version = "1.0.3"
edition = "2021"
authors = ["inyourface3445", "inyourface3445@gmail.com"]
description = "a simple ripgrep tool that suports regular expressions"
license = "MIT"
documentation = "https://google.com"
# documentation = "ripgrep <filepath> <query> -c [enables case sensativity] -r [enables regex]"
homepage = "https://google.com"
repository = "https://github.com/inyourface34456/ripgrep"

[dependencies]
regex = "1.7.1"
